"Creación de las interfaces y algunas clases"

--- a/Practica2_amc/nbproject/project.properties
+++ b/Practica2_amc/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Practica2_amc
-main.class=practica2_amc.Practica2_amc
+main.class=Aplicacion.Practica2_amc
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
